--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 sphinx<2.0
 sphinxcontrib-plantuml>=0.11
 sphinx-rtd-theme
--e https://github.com/pieterlexis/sphinx-lua.git#egg=sphinx-lua
+-e git+https://github.com/pieterlexis/sphinx-lua.git#egg=sphinx-lua
