initial kaitai for files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 sphinx<2.0
 sphinxcontrib-plantuml>=0.11
 sphinx-rtd-theme
+pyyaml
 -e git+https://github.com/pieterlexis/sphinx-lua.git#egg=sphinx-lua
