--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,8 +1,9 @@
 version: 2
 build:
-  image: latest
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
 python:
-  version: "3.8"
   install:
     - requirements: requirements.txt
 submodules:
