--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,6 +3,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.8"
+  apt_packages:
+    - plantuml
 python:
   install:
     - requirements: requirements.txt
